updated neural network webpage

--- a/portfolio/neural-network-wifi.html
+++ b/portfolio/neural-network-wifi.html
@@ -3150,7 +3150,7 @@ border-radius: 0px;
 
 <div id="header">
 
-  <h1 class="title toc-ignore">Association Rule Mining - (Frequently Purchased Items in Groups Prediction)</h1>
+  <h1 class="title toc-ignore">Neural Network Wifi Dataset- (Room Prediction)</h1>
 
   <div class="columns-container">
     <div class="column">
