updated clustering webpage (not ready yet)

--- a/portfolio/George-Tapia-Homework_9.html
+++ b/portfolio/George-Tapia-Homework_9.html
@@ -1796,7 +1796,7 @@ display: none;
 
 <div id="header">
 
-  <h1 class="title toc-ignore">Decision Tree Classifier (Hotel Cancelation Rate)</h1>
+  <h1 class="title toc-ignore">Advanced Clustering Techniques</h1>
 
   <div class="columns-container">
   <div class="column">
@@ -1838,7 +1838,7 @@ display: none;
   <div class="sidebar">
     <div class="user">
       <div class="user__pic"></div>
-      <div class="user__name">Decision Tree Classifier</div>
+      <div class="user__name">Advanced Clustering Techniques</div>
     </div>
     <div class="bar">
       <div class="options">
