updated clustering webpage

--- a/portfolio/advanced-clustering.html
+++ b/portfolio/advanced-clustering.html
@@ -170,7 +170,7 @@ color: rgb(253, 253, 253);
 .sidebar .user__pic {
   width: 10rem;
   height: 10rem;
-  background: url(/images/hotel.png);
+  background: url(/images/cluster.png);
   background-size: cover;
   margin-right: 0.5rem;
   border-radius: 50%;
