--- a/portfolio/advertisement-analysis.html
+++ b/portfolio/advertisement-analysis.html
@@ -183,7 +183,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=EDGE" />
 
 
-<meta name="author" content="George Tapia (A20450857)" />
+<meta name="author" content="George Tapia" />
 
 <meta name="date" content="2023-01-30" />
 
