--- a/portfolio/projects.html
+++ b/portfolio/projects.html
@@ -115,6 +115,22 @@
                       </p>
                     </card>
                   </a>
+
+                  <a href="/maintenance-notifications/under-construction.html" style="text-decoration: none; color: inherit;">
+                    <card data-image="/images/clinic.png">
+                      <h1 slot="header">Mobile Automation Bot for Patient Pickups</h1>
+                      <p slot="content">
+                        This project focuses on automating patient pickup coordination using Tasker and AutoNotification. 
+                        The goal was to create a system that detects specific text messages in a group chat, extracts the 
+                        patient’s name and corresponding address, and automatically replies with the patient's details. 
+                        Through advanced regex parsing, data structuring, and integration with messaging notifications, 
+                        the bot ensures seamless and accurate communication, enhancing workflow efficiency in patient 
+                        transportation management. Challenges like group chat restrictions and parsing complexities 
+                        were resolved through iterative testing, refining data handling, and exploring alternative tools.
+                      </p>
+                      
+                    </card>
+                  </a>
             </div>
         </div>
 
